Fix Authority Authentication